<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:layout_height="match_parent"
    tools:context=".FormCadastro">
    <TextView
        android:id="@+id/textCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastre_se"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        />
    <View
        android:id="@+id/containerComponents"
        style="@style/ContainerComponents"
        app:layout_constraintTop_toBottomOf="@id/textCadastro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
        android:id="@+id/editTextNome"
        style="@style/editTextStyle"
        app:layout_constraintTop_toTopOf="@id/containerComponents"
        app:layout_constraintStart_toStartOf="@id/containerComponents"
        app:layout_constraintEnd_toEndOf="@id/containerComponents"
        android:hint="@string/nome"
        android:inputType="text"
        />
    <EditText
        android:id="@+id/EditTextEmail"
        style="@style/editTextStyle"
        android:autofillHints=""
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="8dp"
        app:layout_constraintTop_toBottomOf="@id/editTextNome"
        app:layout_constraintStart_toStartOf="@id/containerComponents"
        app:layout_constraintEnd_toEndOf="@id/containerComponents"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        />
    <EditText
        android:id="@+id/EditTextSenha"
        style="@style/editTextStyle"
        android:drawableLeft="@drawable/ic_eye"
        android:drawablePadding="8dp"
        app:layout_constraintTop_toBottomOf="@id/EditTextEmail"
        app:layout_constraintStart_toStartOf="@id/containerComponents"
        app:layout_constraintEnd_toEndOf="@id/containerComponents"
        android:hint="@string/senha"
        android:inputType="numberPassword"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btCadastrar"
        style="@style/buttonCadastro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/containerComponents"
        android:text="@string/cadastrar"
        />
</androidx.constraintlayout.widget.ConstraintLayout>