<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".FormLogin"
        tools:ignore="DuplicateIds">
        <ImageView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/ic_skull"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <View
            android:id="@+id/containerComponents"
            style="@style/ContainerComponents"
            android:autofillHints=""
            app:layout_constraintTop_toBottomOf="@id/logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <EditText
            android:id="@+id/edit_email"
            style="@style/editTextStyle"
            android:layout_marginTop="12dp"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="8dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="@id/containerComponents"
            app:layout_constraintStart_toStartOf="@id/containerComponents"
            app:layout_constraintTop_toTopOf="@id/containerComponents" />

        <EditText
            android:id="@+id/edit_senha"
            style="@style/editTextStyle"
            app:layout_constraintStart_toStartOf="@id/containerComponents"
            app:layout_constraintEnd_toEndOf="@id/containerComponents"
            app:layout_constraintTop_toBottomOf="@id/edit_email"
            android:hint="@string/senha"
            android:drawableLeft="@drawable/ic_eye"
            android:drawablePadding="8dp"
            android:inputType="numberPassword"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonEntrar"
            style="@style/button"
            android:text="@string/entrar"
            app:layout_constraintStart_toStartOf="@id/containerComponents"
            app:layout_constraintEnd_toEndOf="@id/containerComponents"
            app:layout_constraintTop_toBottomOf="@id/edit_senha"
            />
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/containerComponents"
            android:visibility="invisible"
            android:indeterminateTint="@color/white"
            />
        <TextView
            android:id="@+id/text_tela_cadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crie_uma_conta_clicando_aqui"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/progressBar"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>